--- a/src/app/configuration/takers/takers-detail/takers-detail.component.html
+++ b/src/app/configuration/takers/takers-detail/takers-detail.component.html
@@ -1,1 +1,226 @@
-<p>takers-detail works!</p>
+<app-toolbar ></app-toolbar>
+<div class="container">
+    <div class="row mt-5" *ngIf="alert.show">
+        <div class="col-sm-12 col-md-6 mx-auto">
+            <ngb-alert *ngIf="alert.show" [type]="alert.type" (close)="alert.show = false;">{{ alert.message | translate }}</ngb-alert>
+        </div>
+    </div>
+    <div class="row mt-5 mb-5">
+        <div class="col-sm-12">
+            <div class="card">
+                <div class="card-header company-card-header">
+                    <div class="row">
+                        <div class="col-6">
+                            Información del Recibo
+                        </div>
+                        <div class="col-6">
+                            <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right" type="button" (click)="cancelSave()" *ngIf="showSaveButton">
+                                <span *ngIf="loading_cancel" class="spinner-border spinner-border-sm mr-1"></span>
+                                {{ "CONFIGURATION.CLAUSES.CANCEL" | translate }}
+                            </button>
+                            <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="editExhibit()" *ngIf="canEdit && showEditButton">
+                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                {{ "CONFIGURATION.CLAUSES.EDIT" | translate }}
+                            </button>
+                            <button [disabled]="loading || loading_cancel" class="btn company-detail-button float-right mr-1" type="button" (click)="onSubmit(detail_form.value)" *ngIf="showSaveButton">
+                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                {{ "CONFIGURATION.CLAUSES.SAVE" | translate }}
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form [formGroup]="detail_form">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>Tomador</label>
+                                    <input type="text" formControlName="xtomador" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xtomador').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xtomador').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xtomador').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>Profesión</label>
+                                    <input type="text" formControlName="xprofesion" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xprofesion').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xprofesion').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xprofesion').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>Rif</label>
+                                    <input type="text" formControlName="xrif" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xrif').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xrif').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xrif').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>Domicilio</label>
+                                    <input type="text" formControlName="xdomicilio" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xdomicilio').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xdomicilio').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xdomicilio').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>Zona Postal</label>
+                                    <input type="text" formControlName="xzona_postal" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xzona_postal').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xzona_postal').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xzona_postal').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>Telefono</label>
+                                    <input type="text" formControlName="xtelefono" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xtelefono').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xtelefono').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xtelefono').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-group">
+                                    <label>Correo</label>
+                                    <input type="text" formControlName="xcorreo" class="form-control" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('xcorreo').errors }">
+                                    <div *ngIf="submitted && detail_form.get('xcorreo').errors"  class="invalid-feedback">
+                                        <div *ngIf="detail_form.get('xcorreo').errors.required">{{ "CONFIGURATION.TAXESCONFIGURATION.REQUIREDNAME" | translate }}</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 mb-4 pb-2">
+                                <div class="form-outline">
+                                  <label class="form-label required" for="form3Examplev3">País</label>
+                                  <select formControlName="cpais" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('cpais').errors }" (change)="changeStateData()">
+                                    <option></option>
+                                    <option *ngFor="let country of countryList" value="{{ country.id }}">{{ country.value }}</option>
+                                  </select>                     
+                                  <div *ngIf="submitted && detail_form.get('cpais').errors" class="invalid-feedback">
+                                    <div *ngIf="detail_form.get('cpais').errors.required">Se requiere completar el campo</div>
+                                  </div>
+                                </div>
+                            </div> 
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-outline">
+                                    <label class="form-label" for="form3Examplev5">Estado</label>
+                                    
+                                    <ng-autocomplete  [data]="stateList" [searchKeyword]="keyword" 
+                                                    placeholder="Seleccionar Estado" (selected)='changeCityData($event)'
+                                                    [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
+                                    </ng-autocomplete>
+                                
+                                    <ng-template #itemTemplate let-item >
+                                        <a [innerHTML]="item.value"></a>
+                                    </ng-template>
+                                
+                                    <ng-template #notFoundTemplate let-notFound >
+                                        <div [innerHTML]="notFound"></div>
+                                    </ng-template>
+                                  
+                                </div>
+                            </div> 
+                            <div class="col-sm-12 col-md-4">
+                                <div class="form-outline">
+                                    <label class="form-label" for="form3Examplev5">Ciudad</label>
+                                    <div style="background: fixed">
+                                    <ng-autocomplete  [data]="cityList" [searchKeyword]="keyword" 
+                                                    placeholder="Seleccionar Ciudad"
+                                                    [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
+                                    </ng-autocomplete>
+                                
+                                    <ng-template #itemTemplate let-item >
+                                        <a [innerHTML]="item.value"></a>
+                                    </ng-template>
+                                
+                                    <ng-template #notFoundTemplate let-notFound >
+                                        <div [innerHTML]="notFound"></div>
+                                    </ng-template>
+                                  </div>
+                                </div>
+                            </div> 
+                            <div class="col-md-4 mb-4 pb-2">
+                                <div class="form-outline">
+                                  <label class="form-label required" for="form3Examplev3">Estatus</label>
+                                  <select formControlName="cestatusgeneral" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && detail_form.get('cestatusgeneral').errors }">
+                                    <option></option>
+                                    <option *ngFor="let status of generalStatusList" value="{{ status.id }}">{{ status.value }}</option>
+                                  </select>                     
+                                  <div *ngIf="submitted && detail_form.get('cestatusgeneral').errors" class="invalid-feedback">
+                                    <div *ngIf="detail_form.get('cestatusgeneral').errors.required">Se requiere completar el campo</div>
+                                  </div>
+                                </div>
+                            </div> 
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>   
+<br>
+
+<footer>    
+    <div class="container">       
+      <div class="row">
+        <div class="col-sm-4">
+          <div class="footer-widget">
+            <h3 style="margin-right: 110px;">Horario</h3>
+            <div class="footer-widget-content">
+              <div class="open-time ">
+                  <ul class="opening-time">
+                    <li><span></span><h6>Horario disponible de Lunes a Viernes</h6>
+                    <li><span></span><h6><strong>A partir de :</strong> 8am - 4pm</h6>
+                  </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="footer-widget" style="margin-top: 50px;text-align: -webkit-center;">
+            <h6 >Copyright© CompuAmerica 2022.</h6>
+            <div class="footer-widget-content">
+                <br>
+                <h6>6 C. Negrín, Caracas 1050, Frente al CC. El Recreo. Distrito Capital</h6>
+                <div class="footer-social">
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="footer-widget">
+            <h3>Redes Sociales</h3>
+            <div class="footer-widget-content" style=" text-align: -webkit-center;">
+              <div class="images-gellary">
+                <p></p>
+                <table style="margin-left: 25px;">
+                  <tr>
+                    <td>
+                      <ul>
+                        <li ><a href="https://www.facebook.com/Mundial Autos-Sas-107360681039695" target="_blank"><img  style="border-radius: 6px;background-color: #ffffff7d;" src="./assets/imagenes/facebook.png" alt="Instagram 01" width="40px" height="40px"></a></li>
+                        <br>
+                        <li><a href="https://www.instagram.com/Mundial Autoss.vzla/?hl=es-la" target="_blank"><img style="background-color: #ffffff7d;border-radius: 15px;" src="./assets/imagenes/instagram.png" alt="Instagram 02" width="40px" height="40px"></a></li>
+                      </ul>
+                    </td>
+                    <td>
+                      <ul>
+                        <li style="border-radius: 15px;"><a  href="https://twitter.com/Mundial Autos" target="_blank"><img style="background-color: #ffffff7d;" src="./assets/imagenes/twitter.png" alt="Instagram 01" width="40px" height="40px"></a></li>
+                        <br>
+                        <li style="border-radius: 15px;"><a href="https://co.linkedin.com/company/linkedin-com-company-Mundial Autossas" target="_blank"><img  style="background-color: #ffffff7d"src="./assets/imagenes/linkedin.png"  width="40px" height="40px"></a></li>
+                      </ul>
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
