--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -7,7 +7,7 @@
    </div>
 </div>
 <section>
-    <div class="container py-5 " style="position: sticky;z-index: -4; ">
+    <div class="container py-5 ">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div >
         <div  class="card card-registration card-registration-2" style="border-radius: 15px;">
@@ -136,6 +136,15 @@
                         </div>
                       </div>
                     </div>
+                    <div class="col-md-4 mb-4 pb-2">
+                      <div class="form-outline form-white">
+                        <label class="form-label required" for="form3Examplea8">Zona Postal</label>
+                        <input type="text" formControlName="xzona_postal" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xzona_postal').errors }" />
+                        <div *ngIf="submitted && search_form.get('xzona_postal').errors" class="invalid-feedback">
+                          <div *ngIf="search_form.get('xzona_postal').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -254,19 +263,67 @@
                     </div>
                     <div class="col-md-3 mb-4 pb-2">
                       <div class="form-outline">
-                        <label class="form-label required" for="form3Examplev5">Tipo de vehículo</label>
-                        <select formControlName="xtipo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtipo').errors }">
-                          <option value="Particular">Particular</option>
-                          <option value="Rustico">Rustico</option>
-                          <option value="Pick-UP">Pick-UP</option>
-                          <option value="Carga">Carga</option>
-                          <option value="Carga 5-8">Carga 5-8 Toneladas</option>
-                          <option value="Carga 8-12">Carga 8-12 Toneladas</option>
-                          <option value="Carga M-12">Carga M-12 Toneladas</option>
-                          <option value="Motos">Motos</option>
-                        </select>
-                        <div *ngIf="submitted && search_form.get('xtipo').errors" class="invalid-feedback">
+                        <label class="form-label required" for="form3Examplev5">Tarifa</label>
+                        <select formControlName="ctarifa_exceso" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ctarifa_exceso').errors }" >
+                        <option *ngFor="let tipo of TypeVehicleList" value="{{ tipo.id }}">{{ tipo.value }}</option>
+                      </select>
+                        <div *ngIf="submitted && search_form.get('ctarifa_exceso').errors" class="invalid-feedback">
+                          <div *ngIf="search_form.get('ctarifa_exceso').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 mb-4 pb-2">
+                      <div class="form-outline">                        
+                        <label class="form-label required" for="form3Examplev4">Uso</label>
+                        <select formControlName="xuso" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xuso').errors } ">
+                          <option value="PARTICULAR">PARTICULAR</option>
+                          <option value="PRIVADO">PRIVADO</option>
+                          <option value="CARGA">CARGA</option>
+                        </select>                         
+                        <div *ngIf="submitted && search_form.get('xuso').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('xuso').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 mb-4 pb-2">
+                      <div class="form-outline">                        
+                        <label class="form-label required" for="form3Examplev4">Tipo de Vehículo</label>
+                        <select formControlName="xtipo" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xtipo').errors } ">
+                          <option value="PARTICULAR">PARTICULAR</option>
+                          <option value="RUSTICO">RUSTICO</option>
+                          <option value="PICK-UP">PICK-UP</option>
+                          <option value="CARGA">CARGA</option>
+                          <option value="MOTO">MOTO</option>
+                          <option value="TRANSPORTE URBANO">TRANSPORTE URBANO-</option>
+                        </select>                         
+                        <div *ngIf="submitted && search_form.get('xtipo').errors"  class="invalid-feedback">
                           <div *ngIf="search_form.get('xtipo').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 mb-4 pb-2">
+                      <div class="form-outline">                        
+                        <label class="form-label required" for="form3Examplev4">Clase</label>
+                        <select formControlName="xclase" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xclase').errors } ">
+                          <option value="AUTOMOVIL">AUTOMOVIL</option>
+                          <option value="RUSTICO">RUSTICO</option>
+                          <option value="CAMIONETA">CAMIONETA</option>
+                          <option value="CAMION">CAMION</option>
+                          <option value="MOTO">MOTO</option>
+                          <option value="VAN">VAN-</option>
+                          <option value="MINIVAN">MINIVAN-</option>
+                        </select>                         
+                        <div *ngIf="submitted && search_form.get('xclase').errors"  class="invalid-feedback">
+                          <div *ngIf="search_form.get('xclase').errors.required">Se requiere completar el campo</div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-4 mb-4 pb-2">
+                      <div class="form-outline form-white">
+                        <label class="form-label required" for="form3Examplea8">Kilometraje</label>
+                        <input type="number" formControlName="nkilometraje" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('nkilometraje').errors }" />
+                        <div *ngIf="submitted && search_form.get('nkilometraje').errors" class="invalid-feedback">
+                          <div *ngIf="search_form.get('nkilometraje').errors.required">Se requiere completar el campo</div>
                         </div>
                       </div>
                     </div>
@@ -446,6 +503,25 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-sm-12 col-md-4">
+                    <div class="form-outline">
+                        <label class="form-label" for="form3Examplev5">Tomador</label>
+                        <div >
+                        <ng-autocomplete  [data]="takersList" [searchKeyword]="keyword" 
+                                        placeholder="Seleccionar Tomador" (selected)='selectedTaker($event)'
+                                        [itemTemplate]="itemTemplate" [notFoundTemplate]="notFoundTemplate">                                 
+                        </ng-autocomplete>
+                    
+                        <ng-template #itemTemplate let-item >
+                            <a [innerHTML]="item.value"></a>
+                        </ng-template>
+                    
+                        <ng-template #notFoundTemplate let-notFound  >
+                            <div [innerHTML]="notFound"></div>
+                        </ng-template>
+                      </div>
+                    </div>
+                  </div> 
                   <div class="col-md-2 mb-4 pb-2 mb-md-0 pb-md-0">
                     <div class="form-outline">
                       <label class="form-label required" for="form3Examplev5">Fecha de inicio</label>
